[package]
name = "bubble"
version = "0.1.0"
authors = ["Yuntao Wang <ytcoode@gmail.com>"]
edition = "2021"
description = "A Rust-based versatile proxy server that supports SOCKS5, HTTP, and HTTPS protocols, providing fast, efficient, and secure Internet access."
license = "MIT"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.14", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
hyper = { git = "https://github.com/hyperium/hyper.git", features = ["full"] }
color-print = "0.3.4"
tracing = { git = "https://github.com/tokio-rs/tracing.git" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", features = ["env-filter"] }
